# MLDatasetManager

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mldatasetmanager/: __init__.py  api.py  reports.py
src/mldatasetmanager/adapters/: __init__.py  base.py  coco.py  registry.py  yolo.py
src/mldatasetmanager/cli/: main.py
src/mldatasetmanager/conversion/: __init__.py  pipeline.py
src/mldatasetmanager/core/: __init__.py  models.py
src/mldatasetmanager/merging/: __init__.py  merger.py
src/mldatasetmanager/splitting/: __init__.py  splitter.py
src/mldatasetmanager/validation/: __init__.py  validators.py
tests/: conftest.py  test_cli.py  test_coco_adapter.py  test_conversion.py  test_merge.py  test_obb.py  test_split.py  test_validation.py  test_yolo_adapter.py
