[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mldatasetmanager"
version = "0.1.0"
description = "Machine learning dataset import, validation, and conversion tools."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "MLDatasetManager contributors" }]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
mldm = "mldatasetmanager.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mldatasetmanager"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF012"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
